--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,16 @@
 html {
   font-family: 'Inter', sans-serif;
 }
+/* Hide scrollbar for Chrome, Safari, and Opera */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
 
+/* Hide scrollbar for IE, Edge, and Firefox */
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
 @layer base {
   :root {
     /* Light Theme */
